--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -341,8 +341,6 @@
 <!-- axios -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.4.0/axios.min.js" integrity="sha512-uMtXmF28A2Ab/JJO2t/vYhlaa/3ahUOgj1Zf27M5rOo8/+fcTUVH0/E0ll68njmjrLqOBjXM3V9NiPFL5ywWPQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-<!--<script src="/js/notification.js"></script>-->
-
 <script>
     function formatDateTime(rawDate) {
         const formattedDate = moment(rawDate, 'YYYY-MM-DDTHH:mm:ss').format('YYYY.MM.DD HH:mm');
@@ -404,6 +402,10 @@
                   notificationSpan.style.display = 'block';
                 }
        };
+</script>
+
+<script>
+
 </script>
 <script>
 
