--- a/src/main/resources/templates/update.html
+++ b/src/main/resources/templates/update.html
@@ -46,11 +46,17 @@
             margin: 0;
         }
 
-        .notification>.nickname{
+        .notification>.nicknameBox{
+            display : flex;
+            justify-content: space-between;
+        }
+
+        .notification>.nicknameBox>.nickname{
             font-size : 0.85rem;
             font-weight: 700;
+
         }
-        .notification>.nickname>span{
+        .notification>.nicknameBox>.nickname>span{
             font-size : 0.85rem;
             font-weight:500;
         }
@@ -311,65 +317,94 @@
 
 <script>
   function formatDateTime(rawDate) {
-        const formattedDate = moment(rawDate, 'YYYY-MM-DDTHH:mm:ss').format('YYYY.MM.DD HH:mm');
-        return formattedDate;
-    }
+      const formattedDate = moment(rawDate, 'YYYY-MM-DDTHH:mm:ss').format('YYYY.MM.DD HH:mm');
+      return formattedDate;
+  }
 
-   // 서버에서 알림 데이터를 가져와 동적으로 렌더링하는 함수
-    function loadNotifications() {
-        $.ajax({
-            url: "/boardnotification/read", // 알림 데이터를 제공하는 엔드포인트
-            method: "GET",
-            dataType: "json",
-            success: function(data) {
-                // 알림 데이터를 동적으로 렌더링합니다.
-                const notificationContainer = $("#notification-container");
+ // 서버에서 알림 데이터를 가져와 동적으로 렌더링하는 함수
+  function loadNotifications() {
+      $.ajax({
+          url: "/boardnotification/read", // 알림 데이터를 제공하는 엔드포인트
+          method: "GET",
+          dataType: "json",
+          success: function(data) {
+              // 알림 데이터를 동적으로 렌더링합니다.
+              const notificationContainer = $("#notification-container");
 
-                data.forEach(function(notification) {
-                    // 알림을 동적으로 생성하여 추가합니다.
-                    const notificationElement = `
-                        <div class="notification">
-                            <i class="fas fa-bell"></i>
-                            <div class="nickname">${notification.replynickname}<span>님이 댓글을 남겼습니다.</span></div>
-                            <a href="/read/${notification.bid}">
-                                <div>${notification.message}</div>
-                            </a>
-                            <div class="date">${formatDateTime(notification.rdate)}</div>
-                        </div>
-                    `;
-                    notificationContainer.append(notificationElement);
-                });
-            },
-            error: function(error) {
-                console.error("Error fetching notifications: " + error);
-            }
-        });
-    }
+              data.forEach(function(notification) {
+                  // 알림을 동적으로 생성하여 추가합니다.
+                  const notificationElement = `
+                      <div class="notification">
+                          <i class="fas fa-bell"></i>
+                          <div class="nicknameBox">
+                              <div class="nickname">
+                                  ${notification.replynickname}
+                                  <span>님이 댓글을 남겼습니다.</span>
+                              </div>
+                              <a href="javascript:void(0);" onclick="deleteNotification(${notification.nid})">
+                                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-circle" viewBox="0 0 16 16">
+                                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+                                    <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
+                                  </svg>
+                              </a>
+                          </div>
+                          <a href="/read/${notification.bid}">
+                              <div>${notification.message}</div>
+                          </a>
+                          <div class="date">${formatDateTime(notification.rdate)}</div>
+                      </div>
+                  `;
+                  notificationContainer.append(notificationElement);
+              });
+          },
+          error: function(error) {
+              console.error("Error fetching notifications: " + error);
+          }
+      });
+  }
 
-    // 페이지가 로드될 때 알림을 가져와서 렌더링합니다.
-    $(document).ready(function() {
-        loadNotifications();
-    });
+  // 알림삭제 요청
+  function deleteNotification(nid) {
+  $.ajax({
+      url: "/boardnotification/deleteNotification/" + nid,
+      method: "DELETE",
+      success: function(response) {
+          console.log(response);
+          // 삭제가 성공하면 알림을 동적으로 삭제
+          $("#notification-" + nid).remove();
+          location.reload();
 
-    //---------------------------------
-        //소켓 연결
-        //---------------------------------
-        var socket = new WebSocket('ws://localhost:8080/socket');
+      },
+      error: function(error) {
+          console.error("Error deleting notification: " + error);
+      }
+  });
+}
 
-        //---------------------------------
-        //메세지 수신
-        //---------------------------------
-        let amarmtest = 0;
-        socket.onmessage = function(event) {
-                var message = event.data;
-                console.log('message : ',message);
-                alert("Message : "+message);
+  // 페이지가 로드될 때 알림을 가져와서 렌더링합니다.
+  $(document).ready(function() {
+      loadNotifications();
+  });
 
-                const notificationSpan = document.querySelector('.notification .counter');
-                if (notificationSpan) {
-                  notificationSpan.style.display = 'block';
-                }
-       };
+  //---------------------------------
+      //소켓 연결
+      //---------------------------------
+      var socket = new WebSocket('ws://localhost:8080/socket');
+
+      //---------------------------------
+      //메세지 수신
+      //---------------------------------
+      let amarmtest = 0;
+      socket.onmessage = function(event) {
+              var message = event.data;
+              console.log('message : ',message);
+              alert("Message : "+message);
+
+              const notificationSpan = document.querySelector('.notification .counter');
+              if (notificationSpan) {
+                notificationSpan.style.display = 'block';
+              }
+     };
 </script>
 
 <script>
