--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -317,7 +317,7 @@
             <!--            내정보-->
             <div class="myInfo" style="height : 60px;margin-top : 15px;">
                 <img th:src="${#authentication.getPrincipal().getUser().getProfile()}" style="width:40px;height:40px;border-radius:50%;margin-left : 10px;margin-right : 10px;" />
-                <span th:text="${#authentication.getPrincipal().getUser().getEmail()}">my email</span>
+                <span th:text="${#authentication.getPrincipal().getUser().getNickname()}">my email</span>
             </div>
 
             <!--            친구정보-->
