--- a/src/main/resources/templates/update.html
+++ b/src/main/resources/templates/update.html
@@ -75,6 +75,10 @@
             color : blue;
             text-decoration: underline;
         }
+
+        .Notidelete {
+            color: gray;
+        }
   </style>
 
 </head>
@@ -332,7 +336,7 @@
               const notificationContainer = $("#notification-container");
 
               data.forEach(function(notification) {
-
+                  // 알림을 동적으로 생성하여 추가합니다.
                   const notificationElement = `
                       <div class="notification">
                           <i class="fas fa-bell"></i>
@@ -341,7 +345,7 @@
                                   ${notification.replynickname}
                                   <span>님이 댓글을 남겼습니다.</span>
                               </div>
-                              <a href="javascript:void(0);" onclick="deleteNotification(${notification.nid})">
+                              <a href="javascript:void(0);" onclick="deleteNotification(${notification.nid})" class="Notidelete">
                                   <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-circle" viewBox="0 0 16 16">
                                     <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
                                     <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
@@ -353,15 +357,15 @@
                           </a>
                           <div class="date">${formatDateTime(notification.rdate)}</div>
                       </div>
-                    `;
-                    notificationContainer.append(notificationElement);
-                });
-            },
-            error: function(error) {
-                console.error("Error fetching notifications: " + error);
-            }
-        });
-    }g
+                  `;
+                  notificationContainer.append(notificationElement);
+              });
+          },
+          error: function(error) {
+              console.error("Error fetching notifications: " + error);
+          }
+      });
+  }
 
   // 알림삭제 요청
   function deleteNotification(nid) {
