--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -138,6 +138,7 @@
         .notification>.nicknameBox{
             display : flex;
             justify-content: space-between;
+            height : 30px;
         }
 
         .notification>.nicknameBox>.nickname{
@@ -155,18 +156,24 @@
             color : gray;
         }
 
-        .notification>a{
+        .notification>div>a{
             color : black;
             text-decoration: none;
         }
 
-        .notification>a:hover{
+        .notification>div>a:hover{
             color : blue;
             text-decoration: underline;
         }
 
         .Notidelete {
             color: gray;
+            display : none;
+            margin-right : 15px;
+        }
+
+        .notification:hover .Notidelete{
+            display : block;
         }
 
     </style>
@@ -520,9 +527,7 @@
                                     </svg>
                                 </a>
                             </div>
-                            <a href="/read/${notification.bid}">
-                                <div>${notification.message}</div>
-                            </a>
+                            <div><a href="/read/${notification.bid}">${notification.message}</a></div>
                             <div class="date">${formatDateTime(notification.rdate)}</div>
                         </div>
                     `;
