--- a/src/main/resources/templates/read.html
+++ b/src/main/resources/templates/read.html
@@ -45,6 +45,7 @@
         .notification>.nicknameBox{
             display : flex;
             justify-content: space-between;
+            height : 30px;
         }
 
         .notification>.nicknameBox>.nickname{
@@ -62,18 +63,24 @@
             color : gray;
         }
 
-        .notification>a{
+        .notification>div>a{
             color : black;
             text-decoration: none;
         }
 
-        .notification>a:hover{
+        .notification>div>a:hover{
             color : blue;
             text-decoration: underline;
         }
 
-      .Notidelete {
+        .Notidelete {
             color: gray;
+            display : none;
+            margin-right : 15px;
+        }
+
+        .notification:hover .Notidelete{
+            display : block;
         }
 
   </style>
@@ -521,9 +528,7 @@
                                   </svg>
                               </a>
                           </div>
-                          <a href="/read/${notification.bid}">
-                              <div>${notification.message}</div>
-                          </a>
+                          <div><a href="/read/${notification.bid}">${notification.message}</a></div>
                           <div class="date">${formatDateTime(notification.rdate)}</div>
                       </div>
                   `;
