--- a/src/main/resources/templates/message/rooms.html
+++ b/src/main/resources/templates/message/rooms.html
@@ -305,7 +305,7 @@
 
     <section class="listBox">
         <div class="list">
-            <ul id="friend-list" th:each="friend : ${followingList}">
+            <ul class="friend-list" th:each="friend : ${followingList}">
                 <!-- data-nickname 속성을 추가하고 해당 속성에 친구의 nickname을 할당 -->
                 <li class="friend-item" th:text="${friend.nickname}" th:attr="data-nickname=${friend.nickname}"></li>
             </ul>
@@ -319,16 +319,19 @@
 </main>
 
 <script>
-    document.getElementById("friend-list").addEventListener("click", function (event) {
-        if (event.target && event.target.tagName === "LI") {
-            openChatRoom(event.target.getAttribute("data-nickname"));
-        }
-    });
+    document.querySelectorAll(".friend-list").forEach(function (list) {
+       list.addEventListener("click", function (event) {
+           if (event.target.tagName === "LI") {
+               openChatRoom(event.target.getAttribute("data-nickname"));
+           }
+       });
+   });
 
-    // 팔로우한 친구와의 채팅방 열기
-    function openChatRoom(otherNickname) {
-        window.location.href = "/message/chat/" + otherNickname;
-    }
+
+   // 팔로우한 친구와의 채팅방 열기
+   function openChatRoom(otherNickname) {
+       window.location.href = "/message/chat/" + otherNickname;
+   }
 </script>
 
 
